# libsdlog

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md
include/sdlog/: decls.h  encoder.h  error.h  memory.h  model.h  parser.h  sdlog.h  streams.h  version.h  writer.h
src/: CMakeLists.txt  config.h.in  error.c
src/core/: encoder.c  endianness.c  endianness.h  error.c  memory.c  model.c  parser.c  writer.c
src/io/: base.c  buffer.c  file.c  null.c  stream_base.h
test/: CMakeLists.txt  test_io.c  test_message_format.c  test_writer.c  utils.h
